# RPG_Server

./: .gitignore  .gitmodules  AGENTS.md  Build.sh  CMakeLists.txt  README.md  RunServer  RunServer.sh  StopServer  StopServer.sh  autoinit.sh  build  build.sh  gen_data.sh  log.sh  loginserverlist.xml  loginserverlist.xml.example  pull.sh  push.sh
.cadb/: connections.json
.cadb/rpg_table/: 20260613110041.sql
.cursor/plans/: 22项问题审计结论_88c69023.plan.md  3d计划文档修正_fa2fcce9.plan.md  3d迁移完整方案_1930feb4.plan.md  3party_vendor_offline_148a5df4.plan.md  (+66 more)
3Party/: .gitignore  README.md  build_protobuf.sh  download_and_build.sh  fetch_vendor.sh  versions.env
AOIServer/: AOIServer  AOIServer.cpp  AOIServer.h  AoiInternMsgRegister.cpp  AoiInternMsgRegister.h  main.cpp
DataDoc/: README.md  npc.xlsx  quest.xlsx
Doc/: README.md
GatewayServer/: ClientMsgRouter.h  ClientMsgValidator.h  GatewayClientMsgRegister.cpp  GatewayClientMsgRegister.h  GatewayInternMsgRegister.cpp  GatewayInternMsgRegister.h  GatewayScenePool.cpp  GatewayScenePool.h  GatewayServer  GatewayServer.cpp  GatewayServer.h  GatewayUser.cpp  GatewayUser.h  GatewayUserManager.cpp  GatewayUserManager.h  SceneClient.cpp  SceneClient.h  main.cpp
GlobalServer/: GlobalGameZoneMsg.cpp  GlobalGameZoneMsg.h  GlobalGameZoneRankMsg.cpp  GlobalGameZoneRankMsg.h  GlobalGameZoneSyncMsg.cpp  GlobalGameZoneSyncMsg.h  GlobalHttpApi.cpp  GlobalHttpApi.h  GlobalHttpClient.cpp  GlobalHttpClient.h  GlobalHttpServer.cpp  GlobalHttpServer.h  GlobalInternMsgRegister.cpp  GlobalInternMsgRegister.h  GlobalServer  GlobalServer.cpp  GlobalServer.h  extern_global.xml  main.cpp
LoggerServer/: LoggerGameZoneLogMsg.cpp  LoggerGameZoneLogMsg.h  LoggerInternMsgRegister.cpp  LoggerInternMsgRegister.h  LoggerServer  LoggerServer.cpp  LoggerServer.h  extern_logger.xml  main.cpp
LoginServer/: LoginAuthService.cpp  LoginAuthService.h  LoginClientMsgRegister.cpp  LoginClientMsgRegister.h  LoginClientMsgValidator.h  LoginExternConfig.h  LoginGameZoneAuthMsg.cpp  LoginGameZoneAuthMsg.h  LoginGameZoneGatewayMsg.cpp  LoginGameZoneGatewayMsg.h  LoginGameZoneGmMsg.cpp  LoginGameZoneGmMsg.h  LoginGameZoneMsg.cpp  LoginGameZoneMsg.h  LoginGameZoneRechargeMsg.cpp  LoginGameZoneRechargeMsg.h  LoginGameZoneZoneMsg.cpp  LoginGameZoneZoneMsg.h  LoginGatewayRegistry.cpp  LoginGatewayRegistry.h  LoginGmService.cpp  LoginGmService.h  LoginRechargeService.cpp  LoginRechargeService.h  LoginRegisterService.cpp  LoginRegisterService.h  LoginServer  LoginServer.cpp  LoginServer.h  LoginTokenUtil.cpp  LoginTokenUtil.h  ServerListLoader.h  ZoneInfoStore.cpp  ZoneInfoStore.h  extern_login.xml  extern_login.xml.example  main.cpp  serverlist.xml
RecordServer/: RecordCharService.cpp  RecordCharService.h  RecordInternMsgRegister.cpp  RecordInternMsgRegister.h  RecordServer  RecordServer.cpp  RecordServer.h  RecordUser.cpp  RecordUser.h  RecordUserManager.cpp  RecordUserManager.h  RelationStore.cpp  RelationStore.h  main.cpp
SceneServer/: AOIClient.cpp  AOIClient.h  Bag.h  BagManager.cpp  BagManager.h  BuffManager.cpp  BuffManager.h  CopyScene.cpp  CopyScene.h  EquipBag.cpp  EquipBag.h  ItemManager.cpp  ItemManager.h  LuaBinder.h  LuaManager.cpp  LuaManager.h  MapDataLoader.cpp  MapDataLoader.h  MoveValidator.cpp  MoveValidator.h  RecordClient.cpp  RecordClient.h  Scene.cpp  Scene.h  SceneClientMsgRegister.cpp  SceneClientMsgRegister.h  SceneEntry.cpp  SceneEntry.h  SceneInternMsgRegister.cpp  SceneInternMsgRegister.h  SceneLoginMsg.cpp  SceneLoginMsg.h  SceneManager.cpp  SceneManager.h  SceneNpc.cpp  SceneNpc.h  SceneNpcManager.cpp  SceneNpcManager.h  ScenePeerClient.cpp  ScenePeerClient.h  (+17 more)
Server/: CMakeLists.txt  RunServer.sh  autoinit.sh  log.sh  loginserverlist.xml
SessionServer/: SessionClientMsgRegister.cpp  SessionClientMsgRegister.h  SessionCopyScene.h  SessionInternMsgRegister.cpp  SessionInternMsgRegister.h  SessionLoginMsg.cpp  SessionLoginMsg.h  SessionScene.h  SessionSceneManager.cpp  SessionSceneManager.h  SessionServer  SessionServer.cpp  SessionServer.h  SessionUser.cpp  SessionUser.h  SessionUserManager.cpp  SessionUserManager.h  main.cpp
SuperServer/: LoginExternOutbox.cpp  LoginExternOutbox.h  SuperExternRouter.cpp  SuperExternRouter.h  SuperGlobalMsg.cpp  SuperGlobalMsg.h  SuperInternMsgRegister.cpp  SuperInternMsgRegister.h  SuperLoggerMsg.cpp  SuperLoggerMsg.h  SuperLoginMsg.cpp  SuperLoginMsg.h  SuperServer  SuperServer.cpp  SuperServer.h  SuperZoneMsg.h  SuperZoneStatusMsg.cpp  SuperZoneStatusMsg.h  main.cpp
ZoneServer/: ZoneGameZoneCrossMsg.cpp  ZoneGameZoneCrossMsg.h  ZoneGameZoneForwardMsg.cpp  ZoneGameZoneForwardMsg.h  ZoneGameZoneMsg.cpp  ZoneGameZoneMsg.h  ZoneInternMsgRegister.cpp  ZoneInternMsgRegister.h  ZoneServer  ZoneServer.cpp  ZoneServer.h  extern_zone.xml  main.cpp
basefile/: README.md  data_table.lua
common/: ClientMsg.h
config/: README.md  config.xml  config.xml.example  server_info.xml  server_info.xml.example
database/: README.md  init.sql  map_config.lua  npc_config.lua  quest_config.lua
docs/: 3D_DESIGN.md  ARCHITECTURE.md  COMMENTS.md  COMMON.md  DATA.md  DEVELOPMENT.md  EXTERNAL.md  GOVERNANCE.md  INDEX.md  LOGIN_CHAR_FLOW.md  LUA.md  PROJECT.md  PROTOCOL.md  SDK.md  SERVERS.md  TLS.md  UNITY_LOGIN_CLIENT.md
maps/: README.md
plan_docs/: getzonelist.txt
protocal/: InternalMsg.h
script/: README.md
scripts/: check_common_headers.sh  check_common_proto.sh  check_login_ports.sh  gen_password_digest.sh  gen_proto.sh  gen_proto_py.sh  gen_tls_certs.sh  open_game_ports.sh  run_smoke.sh  test_login_gateway_e2e.py  test_zone_list_tls.py  validate_production_config.sh
sdk/: README.md
tables/: README.md  alter_character_model.sql  alter_login_flow.sql  alter_relation_add_binary.sql  create_user_and_db.sql  database.credentials  examples_batch_update_test_accounts.sql  examples_query_characters.sql  init.sql  migrate_login_db.sql  migrate_login_session.sql  migrate_login_session_unique.sql  seed_test_data.sql  setup_database.sh
tools/: format_header_methods.py  gen_datadoc.py  requirements-datadoc.txt
(+219 files in other folders)
